--- a/fr/components/Variables.html
+++ b/fr/components/Variables.html
@@ -123,10 +123,9 @@
             
 
             
-            <ul class="articles">
-                
+        </li>
     
-        <li class="chapter " data-level="1.2.1" data-path="../projects/eno/">
+        <li class="chapter " data-level="1.3" data-path="../projects/eno/">
             
                 <a href="../projects/eno/">
             
@@ -139,7 +138,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.2.2" data-path="../projects/lunatic/">
+        <li class="chapter " data-level="1.4" data-path="../projects/lunatic/">
             
                 <a href="../projects/lunatic/">
             
@@ -152,12 +151,7 @@
             
         </li>
     
-
-            </ul>
-            
-        </li>
-    
-        <li class="chapter " data-level="1.3" data-path="../working/">
+        <li class="chapter " data-level="1.5" data-path="../working/">
             
                 <a href="../working/">
             
@@ -170,7 +164,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4" data-path="./">
+        <li class="chapter " data-level="1.6" data-path="./">
             
                 <a href="./">
             
@@ -181,10 +175,9 @@
             
 
             
-            <ul class="articles">
-                
+        </li>
     
-        <li class="chapter active" data-level="1.4.1" data-path="Variables.html">
+        <li class="chapter active" data-level="1.7" data-path="Variables.html">
             
                 <a href="Variables.html">
             
@@ -197,7 +190,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.2" data-path="Sequence.html">
+        <li class="chapter " data-level="1.8" data-path="Sequence.html">
             
                 <a href="Sequence.html">
             
@@ -210,7 +203,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.3" data-path="Subsequence.html">
+        <li class="chapter " data-level="1.9" data-path="Subsequence.html">
             
                 <a href="Subsequence.html">
             
@@ -223,7 +216,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.4" data-path="Input.html">
+        <li class="chapter " data-level="1.10" data-path="Input.html">
             
                 <a href="Input.html">
             
@@ -236,7 +229,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.5" data-path="Textarea.html">
+        <li class="chapter " data-level="1.11" data-path="Textarea.html">
             
                 <a href="Textarea.html">
             
@@ -249,7 +242,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.6" data-path="InputNumber.html">
+        <li class="chapter " data-level="1.12" data-path="InputNumber.html">
             
                 <a href="InputNumber.html">
             
@@ -262,7 +255,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.7" data-path="CheckboxBoolean.html">
+        <li class="chapter " data-level="1.13" data-path="CheckboxBoolean.html">
             
                 <a href="CheckboxBoolean.html">
             
@@ -275,7 +268,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.8" data-path="Datepicker.html">
+        <li class="chapter " data-level="1.14" data-path="Datepicker.html">
             
                 <a href="Datepicker.html">
             
@@ -288,7 +281,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9" data-path="OptionsComponents.html">
+        <li class="chapter " data-level="1.15" data-path="OptionsComponents.html">
             
                 <a href="OptionsComponents.html">
             
@@ -301,7 +294,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10" data-path="CheckboxGroup.html">
+        <li class="chapter " data-level="1.16" data-path="CheckboxGroup.html">
             
                 <a href="CheckboxGroup.html">
             
@@ -314,7 +307,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11" data-path="FilterDescription.html">
+        <li class="chapter " data-level="1.17" data-path="FilterDescription.html">
             
                 <a href="FilterDescription.html">
             
@@ -327,7 +320,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.12" data-path="Table.html">
+        <li class="chapter " data-level="1.18" data-path="Table.html">
             
                 <a href="Table.html">
             
@@ -340,17 +333,25 @@
             
         </li>
     
-
-            </ul>
-            
-        </li>
-    
-        <li class="chapter " data-level="1.5" data-path="../usage/">
+        <li class="chapter " data-level="1.19" data-path="../usage/">
             
                 <a href="../usage/">
             
                     
                     Comment utiliser Lunatic-Model
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.20" data-path="../data/">
+            
+                <a href="../data/">
+            
+                    
+                    Les données au format Lunatic
             
                 </a>
             
@@ -423,17 +424,17 @@ Elles sont de trois types :</p>
     <span class="token property">&quot;name&quot;</span><span class="token operator">:</span> <span class="token string">&quot;FAVOURITE_CHARACTERS&quot;</span><span class="token punctuation">,</span>
     <span class="token property">&quot;componentRef&quot;</span><span class="token operator">:</span> <span class="token string">&quot;FAVOURITE_CHARACTERS_COMPONENT&quot;</span><span class="token punctuation">,</span>
     <span class="token property">&quot;values&quot;</span><span class="token operator">:</span> <span class="token punctuation">{</span>
-        <span class="token property">&quot;PREVIOUS&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span><span class="token punctuation">,</span>
-        <span class="token property">&quot;COLLECTED&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span><span class="token punctuation">,</span>
-        <span class="token property">&quot;FORCED&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span><span class="token punctuation">,</span>
-        <span class="token property">&quot;EDITED&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span><span class="token punctuation">,</span>
-        <span class="token property">&quot;INPUTED&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span>
-      <span class="token punctuation">}</span><span class="token punctuation">,</span>
-  <span class="token punctuation">}</span>
+            <span class="token property">&quot;PREVIOUS&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span><span class="token punctuation">,</span>
+            <span class="token property">&quot;COLLECTED&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span><span class="token punctuation">,</span>
+            <span class="token property">&quot;FORCED&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span><span class="token punctuation">,</span>
+            <span class="token property">&quot;EDITED&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span><span class="token punctuation">,</span>
+            <span class="token property">&quot;INPUTED&quot;</span><span class="token operator">:</span> <span class="token null keyword">null</span>
+    <span class="token punctuation">}</span>
+  <span class="token punctuation">}</span><span class="token punctuation">,</span>
   <span class="token punctuation">{</span>
     <span class="token property">&quot;variableType&quot;</span><span class="token operator">:</span> <span class="token string">&quot;CALCULATED&quot;</span><span class="token punctuation">,</span>
     <span class="token property">&quot;name&quot;</span><span class="token operator">:</span> <span class="token string">&quot;SUM_EXPENSES&quot;</span><span class="token punctuation">,</span>
-    <span class="token property">&quot;expression&quot;</span><span class="token operator">:</span> <span class="token string">&quot;PERCENTAGE_EXPENSES_1 + PERCENTAGE_EXPENSES_2&quot;</span>
+    <span class="token property">&quot;expression&quot;</span><span class="token operator">:</span> <span class="token string">&quot;cast(PERCENTAGE_EXPENSES11,number) + cast(PERCENTAGE_EXPENSES21,number)&quot;</span> <span class="token comment">// expression VTL</span>
   <span class="token punctuation">}</span>
 <span class="token punctuation">]</span>
 </code></pre>
@@ -480,7 +481,7 @@ Elles sont de trois types :</p>
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Variables","level":"1.4.1","depth":2,"next":{"title":"Sequence","level":"1.4.2","depth":2,"path":"components/Sequence.md","ref":"components/Sequence.md","articles":[]},"previous":{"title":"Les composants","level":"1.4","depth":1,"path":"components/README.md","ref":"components/README.md","articles":[{"title":"Variables","level":"1.4.1","depth":2,"path":"components/Variables.md","ref":"components/Variables.md","articles":[]},{"title":"Sequence","level":"1.4.2","depth":2,"path":"components/Sequence.md","ref":"components/Sequence.md","articles":[]},{"title":"Subsequence","level":"1.4.3","depth":2,"path":"components/Subsequence.md","ref":"components/Subsequence.md","articles":[]},{"title":"Input","level":"1.4.4","depth":2,"path":"components/Input.md","ref":"components/Input.md","articles":[]},{"title":"Textarea","level":"1.4.5","depth":2,"path":"components/Textarea.md","ref":"components/Textarea.md","articles":[]},{"title":"InputNumber","level":"1.4.6","depth":2,"path":"components/InputNumber.md","ref":"components/InputNumber.md","articles":[]},{"title":"CheckboxBoolean","level":"1.4.7","depth":2,"path":"components/CheckboxBoolean.md","ref":"components/CheckboxBoolean.md","articles":[]},{"title":"Datepicker","level":"1.4.8","depth":2,"path":"components/Datepicker.md","ref":"components/Datepicker.md","articles":[]},{"title":"Les composants à options : Radio, Dropdown, CheckboxOne","level":"1.4.9","depth":2,"path":"components/OptionsComponents.md","ref":"components/OptionsComponents.md","articles":[]},{"title":"CheckboxGroup","level":"1.4.10","depth":2,"path":"components/CheckboxGroup.md","ref":"components/CheckboxGroup.md","articles":[]},{"title":"FilterDescription","level":"1.4.11","depth":2,"path":"components/FilterDescription.md","ref":"components/FilterDescription.md","articles":[]},{"title":"Table","level":"1.4.12","depth":2,"path":"components/Table.md","ref":"components/Table.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight","github","anchorjs","image-captions","include-codeblock","collapsible-chapters"],"root":"./","styles":{"website":"gitbook.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"prism":{},"github":{"url":"https://github.com/InseeFr/Lunatic-Model/"},"search":{},"collapsible-chapters":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"fontsettings":{"theme":"white","family":"sans","size":2},"include-codeblock":{"check":false,"edit":false,"fixlang":false,"lang":"","template":"default","theme":"chrome","unindent":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"edit-link":{"label":"Edit This Page","base":"https://github.com/InseeFr/Lunatic-Model/tree/master/docs"},"theme-default":{"styles":{"website":"gitbook.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false},"anchorjs":{},"image-captions":{"variable_name":"_pictures"}},"theme":"default","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{"_pictures":[]},"title":"Lunatic-Model","language":"fr","gitbook":"*"},"file":{"path":"components/Variables.md","mtime":"2020-06-26T13:36:36.288Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2020-06-26T13:38:08.897Z"},"basePath":"..","book":{"language":"fr"}});
+            gitbook.page.hasChanged({"page":{"title":"Variables","level":"1.7","depth":1,"next":{"title":"Sequence","level":"1.8","depth":1,"path":"components/Sequence.md","ref":"components/Sequence.md","articles":[]},"previous":{"title":"Les composants","level":"1.6","depth":1,"path":"components/README.md","ref":"components/README.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight","github","anchorjs","image-captions","include-codeblock","collapsible-chapters"],"root":"./","styles":{"website":"gitbook.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"prism":{},"github":{"url":"https://github.com/InseeFr/Lunatic-Model/"},"search":{},"collapsible-chapters":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"fontsettings":{"theme":"white","family":"sans","size":2},"include-codeblock":{"check":false,"edit":false,"fixlang":false,"lang":"","template":"default","theme":"chrome","unindent":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"edit-link":{"label":"Edit This Page","base":"https://github.com/InseeFr/Lunatic-Model/tree/master/docs"},"theme-default":{"styles":{"website":"gitbook.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false},"anchorjs":{},"image-captions":{"variable_name":"_pictures"}},"theme":"default","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{"_pictures":[]},"title":"Lunatic-Model","language":"fr","gitbook":"*"},"file":{"path":"components/Variables.md","mtime":"2021-06-18T08:01:53.362Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2021-06-18T08:02:46.155Z"},"basePath":"..","book":{"language":"fr"}});
         });
     </script>
 </div>
